global fix : dark mode, searchbar, sprite list, height wheight icons ...

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,7 +63,7 @@
   --card: hsl(0 0% 99%);
   --card-foreground: hsl(0 0% 0%);
   --border: hsl(34 12% 91%);
-  --input: hsl(34 12% 91%);
+  --input: hsl(34 12% 98%);
   --primary: hsl(34 48% 20%);
   --primary-foreground: hsl(34 48% 80%);
   --secondary: hsl(34 20% 91%);
